# RayTracingMT

./: CMakeLists.txt  README.md
ad/: MeshPrimitiveIterator.h
ad/scene/: dragonScene.mtl  stanfordLucy.mtl
shaders/: display.fs  display.vs  trace.cs
src/: App.h  Camera.h  FPSCamera.cpp  FPSCamera.h  FPScameraManager.cpp  FPScameraManager.h  Main.cpp  RayTracing.cpp  RayTracing.h  Renderer.h  Scene.cpp  Scene.h  UserInterface.cpp  UserInterface.h  Window.cpp  Window.h  bvhPreprocessor.cpp  bvhPreprocessor.h
src/BVH/: AABB_SAH_BVH.cpp  RadixTree_BVH.cpp
